--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "buefy": "^0.5.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
